--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 addons/
 .import/
+__pycache__/pygletWidget.cpython-36.pyc
+__pycache__/ui_mainGUI.cpython-36.pyc
+__pycache__/mainGUI.cpython-36.pyc
+Assets/.DS_Store
+.DS_Store
+__pycache__/tileMapper.cpython-36.pyc
+.gitignore
+.DS_Store
