--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,8 @@
-addons/
-.import/
-__pycache__/pygletWidget.cpython-36.pyc
-__pycache__/ui_mainGUI.cpython-36.pyc
-__pycache__/mainGUI.cpython-36.pyc
-Assets/.DS_Store
-.DS_Store
-__pycache__/tileMapper.cpython-36.pyc
 .gitignore
-.DS_Store
-__pycache__/extra.cpython-36.pyc
-__pycache__/tileBase.cpython-36.pyc
-src/__pycache__/clock.cpython-36.pyc
-src/__pycache__/extra.cpython-36.pyc
-src/__pycache__/pygletWidget.cpython-36.pyc
-src/__pycache__/tileBase.cpython-36.pyc
-src/__pycache__/tileMapper.cpython-36.pyc
-.gitignore
-src/__pycache__/ui_mainGUI.cpython-36.pyc
-.gitignore
-src/__pycache__/timetable.cpython-36.pyc
-src/__pycache__/train.cpython-36.pyc
+build/
+dist/
+SignallingSimulator/__pycache__
+todo.txt
+setup.py
+requirements.txt
+mainSignal.spec
